--- a/admin/views/partials/Certifications/viewCertifications.ejs
+++ b/admin/views/partials/Certifications/viewCertifications.ejs
@@ -18,10 +18,14 @@
         <a
           href="/viewcertifications/<%= certifications._id %>"
           class="btn btn-outline-danger mx-3"
-          >Delete</a
-        >
+          ><i class="fa-solid fa-trash"></i
+        ></a>
       </td>
     </tr>
-    <% }) %> <% } %>
+    <% })}else{ %>
+    <tr>
+      <td colspan="6"><h3>No Certifications Found</h3></td>
+    </tr>
+    <% }%>
   </tbody>
 </table>
