--- a/admin/views/index.ejs
+++ b/admin/views/index.ejs
@@ -15,61 +15,33 @@
             <div class="row">
               <div class="col-xl-3 col-md-6">
                 <div class="card bg-primary text-white mb-4">
-                  <div class="card-body">Primary Card</div>
-                  <div
-                    class="card-footer d-flex align-items-center justify-content-between"
-                  >
-                    <a class="small text-white stretched-link" href="#"
-                      >View Details</a
-                    >
-                    <div class="small text-white">
-                      <i class="fas fa-angle-right"></i>
-                    </div>
+                  <div class="card-body text-center">
+                    <h4 class="card-title">Total Services</h4>
+                    <h1 class="card-text"><%= services.length%></h1>
                   </div>
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
                 <div class="card bg-warning text-white mb-4">
-                  <div class="card-body">Warning Card</div>
-                  <div
-                    class="card-footer d-flex align-items-center justify-content-between"
-                  >
-                    <a class="small text-white stretched-link" href="#"
-                      >View Details</a
-                    >
-                    <div class="small text-white">
-                      <i class="fas fa-angle-right"></i>
-                    </div>
+                  <div class="card-body text-center">
+                    <h4 class="card-title">Total Skills</h4>
+                    <h1 class="card-text"><%= Skills.length%></h1>
                   </div>
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
                 <div class="card bg-success text-white mb-4">
-                  <div class="card-body">Success Card</div>
-                  <div
-                    class="card-footer d-flex align-items-center justify-content-between"
-                  >
-                    <a class="small text-white stretched-link" href="#"
-                      >View Details</a
-                    >
-                    <div class="small text-white">
-                      <i class="fas fa-angle-right"></i>
-                    </div>
+                  <div class="card-body text-center">
+                    <h4 class="card-title">Total Certifications</h4>
+                    <h1 class="card-text"><%= Certifications.length%></h1>
                   </div>
                 </div>
               </div>
               <div class="col-xl-3 col-md-6">
                 <div class="card bg-danger text-white mb-4">
-                  <div class="card-body">Danger Card</div>
-                  <div
-                    class="card-footer d-flex align-items-center justify-content-between"
-                  >
-                    <a class="small text-white stretched-link" href="#"
-                      >View Details</a
-                    >
-                    <div class="small text-white">
-                      <i class="fas fa-angle-right"></i>
-                    </div>
+                  <div class="card-body text-center">
+                    <h4 class="card-title">Total Testimonials</h4>
+                    <h1 class="card-text"><%= Testimonials.length%></h1>
                   </div>
                 </div>
               </div>
