--- a/admin/views/partials/Services/viewServices.ejs
+++ b/admin/views/partials/Services/viewServices.ejs
@@ -13,13 +13,21 @@
       <td><%= services.ServiceDesc %></td>
       <td>
         <a
-          href="/viewservices/<%= services._id %>"
+          href="/viewservices/delete/<%= services._id %>"
           class="btn btn-outline-danger mx-3"
-          >Delete</a
-        >
-        <!-- <a class="btn btn-outline-info">Edit</a> -->
+          ><i class="fa-solid fa-trash"></i
+        ></a>
+        <a
+          href="/viewservices/edit/<%= services._id %>"
+          class="btn btn-outline-info mx-3"
+          ><i class="fa-solid fa-pen-to-square"></i
+        ></a>
       </td>
     </tr>
-    <% }) %> <% } %>
+    <% })}else{ %>
+    <tr>
+      <td colspan="6"><h3>No Services Found</h3></td>
+    </tr>
+    <% }%>
   </tbody>
 </table>
