--- a/admin/views/partials/Skills/viewSkills.ejs
+++ b/admin/views/partials/Skills/viewSkills.ejs
@@ -15,10 +15,14 @@
         <a
           href="/viewskills/<%= skills._id %>"
           class="btn btn-outline-danger mx-3"
-          >Delete</a
-        >
+          ><i class="fa-solid fa-trash"></i
+        ></a>
       </td>
     </tr>
-    <% }) %> <% } %>
+    <% })}else{ %>
+    <tr>
+      <td colspan="6"><h3>No Skills Found</h3></td>
+    </tr>
+    <% }%>
   </tbody>
 </table>
