--- a/admin/views/partials/CV/footer.ejs
+++ b/admin/views/partials/CV/footer.ejs
@@ -22,9 +22,6 @@
     </div> -->
 
     <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-    <p class="m-0">
-      &copy; All Rights Reserved. Designed by
-      <a href="https://htmlcodex.com">HTML Codex</a>
-    </p>
+    <p class="m-0">Copyright &copy; Shaikh Dev 2022</p>
   </div>
 </section>
