--- a/admin/views/partials/CV/contact.ejs
+++ b/admin/views/partials/CV/contact.ejs
@@ -1,12 +1,12 @@
 <section class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
   <h1 class="title pb-3 mb-5">Contact Me</h1>
-  <p class="mb-4">
+  <!-- <p class="mb-4">
     The contact form is currently inactive. Get a functional and working contact
     form with Ajax & PHP in a few minutes. Just copy and paste the files, add a
     little code and you're done.
-    <a href="https://htmlcodex.com/contact-form">Download Now</a>
+    <a href="https://htmlcodex.com/contact-form">Download Now</a> -->
   </p>
-  <form>
+  <form method="post">
     <div class="row g-3">
       <div class="col-md-6">
         <div class="form-floating">
@@ -14,6 +14,8 @@
             type="text"
             class="form-control border-0 bg-secondary"
             id="name"
+            name="name"
+            required
             placeholder="Your Name"
           />
           <label for="name">Your Name</label>
@@ -25,6 +27,8 @@
             type="email"
             class="form-control border-0 bg-secondary"
             id="email"
+            name="email"
+            required
             placeholder="Your Email"
           />
           <label for="email">Your Email</label>
@@ -36,6 +40,8 @@
             type="text"
             class="form-control border-0 bg-secondary"
             id="subject"
+            name="subject"
+            required
             placeholder="Subject"
           />
           <label for="subject">Subject</label>
@@ -47,6 +53,8 @@
             class="form-control border-0 bg-secondary"
             placeholder="Leave a message here"
             id="message"
+            name="message"
+            required
             style="height: 200px"
           ></textarea>
           <label for="message">Message</label>
