--- a/admin/views/partials/Social/addSocial.ejs
+++ b/admin/views/partials/Social/addSocial.ejs
@@ -1,3 +1,8 @@
+<%if(Social.length==1){%>
+<h3>Social Links Already Added</h3>
+
+<%}else{%>
+
 <form method="post">
   <div class="row mb-3">
     <div class="col-md-6 my-3">
@@ -57,3 +62,4 @@
     </div>
   </div>
 </form>
+<%}%>
