--- a/admin/views/partials/Skills/viewSkills.ejs
+++ b/admin/views/partials/Skills/viewSkills.ejs
@@ -1,3 +1,4 @@
+<% if(Skills.length > 0){ %>
 <table id="datatablesSimple">
   <thead>
     <tr>
@@ -8,7 +9,7 @@
   </thead>
   <tbody>
     <tr>
-      <% if(Skills.length > 0){ %> <% Skills.forEach(skills =>{ %>
+      <% Skills.forEach(skills =>{ %>
       <td><%= skills.Name %></td>
       <td><%= skills.Level %></td>
       <td>
@@ -19,10 +20,9 @@
         ></a>
       </td>
     </tr>
-    <% })}else{ %>
-    <tr>
-      <td colspan="6"><h3>No Skills Found</h3></td>
-    </tr>
-    <% }%>
+    <%})%>
   </tbody>
 </table>
+<% }else{%>
+<p>No Skills Added</p>
+<%}%>
