--- a/admin/views/partials/tables.ejs
+++ b/admin/views/partials/tables.ejs
@@ -1,3 +1,4 @@
+<% if(Logs.length > 0){ %>
 <table id="datatablesSimple">
   <thead>
     <tr>
@@ -8,7 +9,6 @@
   </thead>
   <tbody>
     <tr>
-      <% if(Logs.length > 0){ %>
         <% Logs.forEach(log =>{ %>
           <% let logdate =  log.createdAt %>
           <% let date = new Date(logdate) %>
@@ -18,6 +18,9 @@
       <td><%= date %></td>
       </td>
     </tr>
-    <% })} %>
+    <% }) %>
   </tbody>
 </table>
+<%}else{%>
+  <h3>No User Activity Logged</h3>
+<%}%>
