--- a/admin/views/partials/footer.ejs
+++ b/admin/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="py-4 bg-light mt-auto">
   <div class="container-fluid px-4">
-    <div class="d-flex align-items-center justify-content-between small">
+    <div class="d-flex align-items-center justify-content-center small">
       <div class="text-muted">Copyright &copy; Shaikh Dev 2022</div>
       <!-- <div>
         <a href="#">Privacy Policy</a>
