--- a/admin/views/partials/Skills/addSkills.ejs
+++ b/admin/views/partials/Skills/addSkills.ejs
@@ -2,25 +2,13 @@
   <div class="row mb-3">
     <div class="col-md-6 my-3">
       <div class="form-floating mb-3 mb-md-0">
-        <input
-          class="form-control"
-          id="inputSkillName"
-          type="text"
-          name="SkillName"
-          placeholder="Enter your Skill Name"
-        />
+        <input class="form-control" id="inputSkillName" type="text" name="SkillName" placeholder="Enter your Skill Name" />
         <label for="inputSkillName">Skill Name</label>
       </div>
     </div>
     <div class="col-md-6 my-3">
       <div class="form-floating">
-        <input
-          class="form-control"
-          id="inputSkillLevel"
-          type="number"
-          name="SkillLevel"
-          placeholder="Enter your Skill Level"
-        />
+        <input class="form-control" id="inputSkillLevel" type="number" name="SkillLevel" placeholder="Enter your Skill Level" />
         <label for="inputSkillLevel">Skill Level</label>
       </div>
     </div>
