--- a/admin/views/partials/Social/updateSocial.ejs
+++ b/admin/views/partials/Social/updateSocial.ejs
@@ -3,53 +3,25 @@
   <div class="row mb-3">
     <div class="col-md-6 my-3">
       <div class="form-floating mb-3 mb-md-0">
-        <input
-          class="form-control"
-          id="inputFacebook"
-          type="text"
-          name="Facebook"
-          value="<%= Social.Facebook%>"
-          placeholder="Enter your Facebook ID"
-        />
+        <input class="form-control" id="inputFacebook" type="text" name="Facebook" value="<%= Social.Facebook%>" placeholder="Enter your Facebook ID" />
         <label for="inputFacebook">Facebook ID</label>
       </div>
     </div>
     <div class="col-md-6 my-3">
       <div class="form-floating">
-        <input
-          class="form-control"
-          id="inputInstagram"
-          type="text"
-          name="Instagram"
-          value="<%= Social.Instagram%>"
-          placeholder="Enter your Instagram ID"
-        />
+        <input class="form-control" id="inputInstagram" type="text" name="Instagram" value="<%= Social.Instagram%>" placeholder="Enter your Instagram ID" />
         <label for="inputInstagram">Instagram ID</label>
       </div>
     </div>
     <div class="col-md-6 my-3">
       <div class="form-floating">
-        <input
-          class="form-control"
-          id="inputLinkedIn"
-          type="text"
-          name="LinkedIn"
-          value="<%= Social.LinkedIn%>"
-          placeholder="Enter your LinkedIn ID"
-        />
+        <input class="form-control" id="inputLinkedIn" type="text" name="LinkedIn" value="<%= Social.LinkedIn%>" placeholder="Enter your LinkedIn ID" />
         <label for="inputLinkedIn">LinkedIn ID</label>
       </div>
     </div>
     <div class="col-md-6 my-3">
       <div class="form-floating">
-        <input
-          class="form-control"
-          id="inputGithub"
-          type="text"
-          name="Github"
-          value="<%= Social.Github%>"
-          placeholder="Enter your Github ID"
-        />
+        <input class="form-control" id="inputGithub" type="text" name="Github" value="<%= Social.Github%>" placeholder="Enter your Github ID" />
         <label for="inputGithub">Github ID</label>
       </div>
     </div>
