--- a/admin/views/partials/Social/viewSocial.ejs
+++ b/admin/views/partials/Social/viewSocial.ejs
@@ -14,16 +14,8 @@
     <span class="fw-medium text-primary">Github:</span> <%= social.Github %>
   </div>
 </div>
-<a
-  href="/admin/viewsocial/delete/<%= social._id %>"
-  class="btn btn-outline-danger mx-3"
-  ><i class="fa-solid fa-trash"></i
-></a>
-<a
-  href="/admin/viewsocial/edit/<%= social._id %>"
-  class="btn btn-outline-info mx-3"
-  ><i class="fa-solid fa-pen-to-square"></i
-></a>
+<a href="/admin/viewsocial/delete/<%= social._id %>" class="btn btn-outline-danger mx-3"><i class="fa-solid fa-trash"></i></a>
+<a href="/admin/viewsocial/edit/<%= social._id %>" class="btn btn-outline-info mx-3"><i class="fa-solid fa-pen-to-square"></i></a>
 <% })}else{ %>
 <h3>No Social Accounts Found</h3>
 <% }%>
