--- a/admin/views/BioData/addBioData.ejs
+++ b/admin/views/BioData/addBioData.ejs
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include("../partials/head") %>
-  <body class="sb-nav-fixed">
-    <%- include("../partials/navbar") %>
-    <div id="layoutSidenav">
-      <%- include("../partials/sidebar") %>
-      <div id="layoutSidenav_content">
-        <main>
-          <div class="container-fluid px-4">
-            <h1 class="mt-4">Bio Data</h1>
-            <ol class="breadcrumb mb-4">
-              <li class="breadcrumb-item">
-                <a href="/admin/home">Dashboard</a>
-              </li>
-              <li class="breadcrumb-item active">Bio Data</li>
-            </ol>
-            <div class="card mb-4">
-              
-              <div class="card-body"><%- include("../partials/BioData/addBioData") %></div>
+<%- include("../partials/head") %>
+
+<body class="sb-nav-fixed">
+  <%- include("../partials/navbar") %>
+  <div id="layoutSidenav">
+    <%- include("../partials/sidebar") %>
+    <div id="layoutSidenav_content">
+      <main>
+        <div class="container-fluid px-4">
+          <h1 class="mt-4">Bio Data</h1>
+          <ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item">
+              <a href="/admin/home">Dashboard</a>
+            </li>
+            <li class="breadcrumb-item active">Bio Data</li>
+          </ol>
+          <div class="card mb-4">
+            <!-- Flash Message -->
+            <% if(bio_toast !='' ){ %>
+            <% bio_toast.forEach(msg=>{%>
+            <div class="alert alert-<%= msg.type%> text-center alert-dismissible fade show" role="alert">
+              <%= msg.message%>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-        </main>
-        <%- include("../partials/footer") %>
-      </div>
+            <%})}%>
+            <div class="card-body"><%- include("../partials/BioData/addBioData") %></div>
+          </div>
+      </main>
+      <%- include("../partials/footer") %>
     </div>
-    <%- include("../partials/script") %>
-  </body>
+  </div>
+  <%- include("../partials/script") %>
+</body>
+
 </html>
