--- a/admin/views/Register/register.ejs
+++ b/admin/views/Register/register.ejs
@@ -12,6 +12,13 @@
             <div class="col-lg-7">
               <div class="card shadow-lg border-0 rounded-lg mt-5">
                 <div class="card-header">
+                  <% if(register_toast !='' ){ %>
+                  <% register_toast.forEach(msg=>{%>
+                  <div class="alert alert-<%= msg.type%> text-center alert-dismissible fade show" role="alert">
+                    <%= msg.message%>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                  <%})}%>
                   <h3 class="text-center font-weight-light my-4">Create Account</h3>
                 </div>
                 <div class="card-body">
