--- a/admin/views/main.ejs
+++ b/admin/views/main.ejs
@@ -6,16 +6,25 @@
   <div class="p-5 mb-4 bg-light rounded-3 text-center">
     <div class="container-fluid py-5 text-center">
       <h1 class="display-5 fw-bold p-5">
-        Welcome Back To Shaikh Admin Panel
+        Welcome To Admin Panel
       </h1>
       <!-- <h1 class="col-md-8 fs-4 p-5">Shaikh Admin Panel</h1> -->
-      <a class="btn btn-primary btn-lg" href="/admin/home">
-        Continue to Panel
+      <%if(user.length>0){%>
+      <a class="btn btn-primary btn-lg" href="/admin/login">
+        Login
       </a>
+      <% }else{%>
+      <a class="btn btn-primary btn-lg" href="/admin/register">
+        Register
+      </a>
+      <%}%>
+      <!-- <a class="btn btn-primary btn-lg" href="/admin/home">
+        Continue to Panel
+      </a> -->
     </div>
   </div>
   <%- include("./partials/footer") %>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
