Ready to Deploy

--- a/admin/views/Skills/viewSkills.ejs
+++ b/admin/views/Skills/viewSkills.ejs
@@ -12,7 +12,7 @@
           <h1 class="mt-4">View Skills</h1>
           <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item">
-              <a href="/admin/home">Dashboard</a>
+              <a href="/home">Dashboard</a>
             </li>
             <li class="breadcrumb-item active">View Skills</li>
           </ol>
