--- a/admin/views/partials/BioData/viewBioData.ejs
+++ b/admin/views/partials/BioData/viewBioData.ejs
@@ -29,16 +29,8 @@
     <span class="fw-medium text-primary">Freelance:</span> <%= bio.Freelance%>
   </div>
 </div>
-<a
-  href="/admin/viewbiodata/delete/<%= bio._id %>"
-  class="btn btn-outline-danger mx-3"
-  ><i class="fa-solid fa-trash"></i
-></a>
-<a
-  href="/admin/viewbiodata/edit/<%= bio._id %>"
-  class="btn btn-outline-info mx-3"
-  ><i class="fa-solid fa-pen-to-square"></i
-></a>
+<a href="/viewbiodata/delete/<%= bio._id %>" class="btn btn-outline-danger mx-3"><i class="fa-solid fa-trash"></i></a>
+<a href="/viewbiodata/edit/<%= bio._id %>" class="btn btn-outline-info mx-3"><i class="fa-solid fa-pen-to-square"></i></a>
 <% })}else{ %>
 <h3>No Bio Data Found</h3>
 <% }%>
