--- a/admin/views/partials/Skills/viewSkills.ejs
+++ b/admin/views/partials/Skills/viewSkills.ejs
@@ -13,7 +13,7 @@
       <td><%= skills.Name %></td>
       <td><%= skills.Level %></td>
       <td>
-        <a href="/admin/viewskills/<%= skills._id %>" class="btn btn-outline-danger mx-3"><i class="fa-solid fa-trash"></i></a>
+        <a href="/viewskills/<%= skills._id %>" class="btn btn-outline-danger mx-3"><i class="fa-solid fa-trash"></i></a>
       </td>
     </tr>
     <%})%>
