--- a/admin/views/partials/Testimonials/viewTestimonials.ejs
+++ b/admin/views/partials/Testimonials/viewTestimonials.ejs
@@ -15,11 +15,7 @@
       <td><%= testimonials.Profession %></td>
       <td><%= testimonials.Desc %></td>
       <td>
-        <a
-          href="/admin/viewtestimonials/<%= testimonials._id %>"
-          class="btn btn-outline-danger mx-3"
-          ><i class="fa-solid fa-trash"></i
-        ></a>
+        <a href="/viewtestimonials/<%= testimonials._id %>" class="btn btn-outline-danger mx-3"><i class="fa-solid fa-trash"></i></a>
       </td>
     </tr>
     <%})%>
