--- a/admin/views/partials/sidebar.ejs
+++ b/admin/views/partials/sidebar.ejs
@@ -3,7 +3,7 @@
     <div class="sb-sidenav-menu">
       <div class="nav">
         <div class="sb-sidenav-menu-heading">Core</div>
-        <a class="nav-link" href="/admin/home">
+        <a class="nav-link" href="/home">
           <div class="sb-nav-link-icon">
             <i class="fas fa-tachometer-alt"></i>
           </div>
@@ -11,14 +11,7 @@
         </a>
         <div class="sb-sidenav-menu-heading">Interface</div>
         <!-- Bio Data -->
-        <a
-          class="nav-link collapsed"
-          href="#"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseBioData"
-          aria-expanded="false"
-          aria-controls="collapseBioData"
-        >
+        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseBioData" aria-expanded="false" aria-controls="collapseBioData">
           <div class="sb-nav-link-icon">
             <i class="fas fa-columns"></i>
           </div>
@@ -27,26 +20,14 @@
             <i class="fas fa-angle-down"></i>
           </div>
         </a>
-        <div
-          class="collapse"
-          id="collapseBioData"
-          aria-labelledby="headingOne"
-          data-bs-parent="#sidenavAccordion"
-        >
+        <div class="collapse" id="collapseBioData" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" href="/admin/addbiodata">Add Bio Data</a>
-            <a class="nav-link" href="/admin/viewbiodata">View Bio Data</a>
+            <a class="nav-link" href="/addbiodata">Add Bio Data</a>
+            <a class="nav-link" href="/viewbiodata">View Bio Data</a>
           </nav>
         </div>
         <!-- Services -->
-        <a
-          class="nav-link collapsed"
-          href="#"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseServices"
-          aria-expanded="false"
-          aria-controls="collapseServices"
-        >
+        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseServices" aria-expanded="false" aria-controls="collapseServices">
           <div class="sb-nav-link-icon">
             <i class="fas fa-columns"></i>
           </div>
@@ -55,27 +36,15 @@
             <i class="fas fa-angle-down"></i>
           </div>
         </a>
-        <div
-          class="collapse"
-          id="collapseServices"
-          aria-labelledby="headingOne"
-          data-bs-parent="#sidenavAccordion"
-        >
+        <div class="collapse" id="collapseServices" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" href="/admin/addservices">Add Services</a>
-            <a class="nav-link" href="/admin/viewservices">View Services</a>
+            <a class="nav-link" href="/addservices">Add Services</a>
+            <a class="nav-link" href="/viewservices">View Services</a>
           </nav>
         </div>
 
         <!-- Experience -->
-        <a
-          class="nav-link collapsed"
-          href="#"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseExperience"
-          aria-expanded="false"
-          aria-controls="collapseExperience"
-        >
+        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseExperience" aria-expanded="false" aria-controls="collapseExperience">
           <div class="sb-nav-link-icon">
             <i class="fas fa-columns"></i>
           </div>
@@ -84,26 +53,14 @@
             <i class="fas fa-angle-down"></i>
           </div>
         </a>
-        <div
-          class="collapse"
-          id="collapseExperience"
-          aria-labelledby="headingOne"
-          data-bs-parent="#sidenavAccordion"
-        >
+        <div class="collapse" id="collapseExperience" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" href="/admin/addexperience">Add Experience</a>
-            <a class="nav-link" href="/admin/viewexperience">View Experience</a>
+            <a class="nav-link" href="/addexperience">Add Experience</a>
+            <a class="nav-link" href="/viewexperience">View Experience</a>
           </nav>
         </div>
         <!-- Skills -->
-        <a
-          class="nav-link collapsed"
-          href="#"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseSkills"
-          aria-expanded="false"
-          aria-controls="collapseSkills"
-        >
+        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
           <div class="sb-nav-link-icon">
             <i class="fas fa-columns"></i>
           </div>
@@ -112,26 +69,14 @@
             <i class="fas fa-angle-down"></i>
           </div>
         </a>
-        <div
-          class="collapse"
-          id="collapseSkills"
-          aria-labelledby="headingOne"
-          data-bs-parent="#sidenavAccordion"
-        >
+        <div class="collapse" id="collapseSkills" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" href="/admin/addskills">Add Skills</a>
-            <a class="nav-link" href="/admin/viewskills">View Skills</a>
+            <a class="nav-link" href="/addskills">Add Skills</a>
+            <a class="nav-link" href="/viewskills">View Skills</a>
           </nav>
         </div>
         <!-- Education -->
-        <a
-          class="nav-link collapsed"
-          href="#"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseEducation"
-          aria-expanded="false"
-          aria-controls="collapseEducation"
-        >
+        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseEducation" aria-expanded="false" aria-controls="collapseEducation">
           <div class="sb-nav-link-icon">
             <i class="fas fa-columns"></i>
           </div>
@@ -140,26 +85,14 @@
             <i class="fas fa-angle-down"></i>
           </div>
         </a>
-        <div
-          class="collapse"
-          id="collapseEducation"
-          aria-labelledby="headingOne"
-          data-bs-parent="#sidenavAccordion"
-        >
+        <div class="collapse" id="collapseEducation" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" href="/admin/addeducation">Add Education</a>
-            <a class="nav-link" href="/admin/vieweducation">View Education</a>
+            <a class="nav-link" href="/addeducation">Add Education</a>
+            <a class="nav-link" href="/vieweducation">View Education</a>
           </nav>
         </div>
         <!-- Certifications -->
-        <a
-          class="nav-link collapsed"
-          href="#"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseCertifications"
-          aria-expanded="false"
-          aria-controls="collapseCertifications"
-        >
+        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseCertifications" aria-expanded="false" aria-controls="collapseCertifications">
           <div class="sb-nav-link-icon">
             <i class="fas fa-columns"></i>
           </div>
@@ -168,30 +101,14 @@
             <i class="fas fa-angle-down"></i>
           </div>
         </a>
-        <div
-          class="collapse"
-          id="collapseCertifications"
-          aria-labelledby="headingOne"
-          data-bs-parent="#sidenavAccordion"
-        >
+        <div class="collapse" id="collapseCertifications" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" href="/admin/addcertifications"
-              >Add Certifications</a
-            >
-            <a class="nav-link" href="/admin/viewcertifications"
-              >View Certifications</a
-            >
+            <a class="nav-link" href="/addcertifications">Add Certifications</a>
+            <a class="nav-link" href="/viewcertifications">View Certifications</a>
           </nav>
         </div>
         <!-- Testimonials -->
-        <a
-          class="nav-link collapsed"
-          href="#"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseTestimonials"
-          aria-expanded="false"
-          aria-controls="collapseTestimonials"
-        >
+        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseTestimonials" aria-expanded="false" aria-controls="collapseTestimonials">
           <div class="sb-nav-link-icon">
             <i class="fas fa-columns"></i>
           </div>
@@ -200,30 +117,14 @@
             <i class="fas fa-angle-down"></i>
           </div>
         </a>
-        <div
-          class="collapse"
-          id="collapseTestimonials"
-          aria-labelledby="headingOne"
-          data-bs-parent="#sidenavAccordion"
-        >
+        <div class="collapse" id="collapseTestimonials" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" href="/admin/addtestimonials"
-              >Add Testimonials</a
-            >
-            <a class="nav-link" href="/admin/viewtestimonials"
-              >View Testimonials</a
-            >
+            <a class="nav-link" href="/addtestimonials">Add Testimonials</a>
+            <a class="nav-link" href="/viewtestimonials">View Testimonials</a>
           </nav>
         </div>
         <!-- Social -->
-        <a
-          class="nav-link collapsed"
-          href="#"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapseSocial"
-          aria-expanded="false"
-          aria-controls="collapseSocial"
-        >
+        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseSocial" aria-expanded="false" aria-controls="collapseSocial">
           <div class="sb-nav-link-icon">
             <i class="fas fa-columns"></i>
           </div>
@@ -232,15 +133,10 @@
             <i class="fas fa-angle-down"></i>
           </div>
         </a>
-        <div
-          class="collapse"
-          id="collapseSocial"
-          aria-labelledby="headingOne"
-          data-bs-parent="#sidenavAccordion"
-        >
+        <div class="collapse" id="collapseSocial" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" href="/admin/addsocial">Add Social</a>
-            <a class="nav-link" href="/admin/viewsocial">View Social</a>
+            <a class="nav-link" href="/addsocial">Add Social</a>
+            <a class="nav-link" href="/viewsocial">View Social</a>
           </nav>
         </div>
         <!--
@@ -338,7 +234,7 @@
     </div>
     <div class="sb-sidenav-footer">
       <div class="small">Logged in as:</div>
-      Shaikh Admin
+      Shaikh Dev Inc.
     </div>
   </nav>
 </div>
