--- a/admin/views/Services/addServices.ejs
+++ b/admin/views/Services/addServices.ejs
@@ -12,7 +12,7 @@
           <h1 class="mt-4">Services</h1>
           <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item">
-              <a href="/admin/home">Dashboard</a>
+              <a href="/home">Dashboard</a>
             </li>
             <li class="breadcrumb-item active">Services</li>
           </ol>
