--- a/admin/views/main.ejs
+++ b/admin/views/main.ejs
@@ -10,15 +10,15 @@
       </h1>
       <!-- <h1 class="col-md-8 fs-4 p-5">Shaikh Admin Panel</h1> -->
       <%if(user.length>0){%>
-      <a class="btn btn-primary btn-lg" href="/admin/login">
+      <a class="btn btn-primary btn-lg" href="/login">
         Login
       </a>
       <% }else{%>
-      <a class="btn btn-primary btn-lg" href="/admin/register">
+      <a class="btn btn-primary btn-lg" href="/register">
         Register
       </a>
       <%}%>
-      <!-- <a class="btn btn-primary btn-lg" href="/admin/home">
+      <!-- <a class="btn btn-primary btn-lg" href="/home">
         Continue to Panel
       </a> -->
     </div>
