--- a/admin/views/partials/Certifications/viewCertifications.ejs
+++ b/admin/views/partials/Certifications/viewCertifications.ejs
@@ -17,11 +17,7 @@
       <td><%= certifications.IssueYear %></td>
       <td><%= certifications.Desc %></td>
       <td>
-        <a
-          href="/admin/viewcertifications/<%= certifications._id %>"
-          class="btn btn-outline-danger mx-3"
-          ><i class="fa-solid fa-trash"></i
-        ></a>
+        <a href="/viewcertifications/<%= certifications._id %>" class="btn btn-outline-danger mx-3"><i class="fa-solid fa-trash"></i></a>
       </td>
     </tr>
     <%})%>
