--- a/admin/views/partials/Education/viewEducation.ejs
+++ b/admin/views/partials/Education/viewEducation.ejs
@@ -21,11 +21,7 @@
       <td><%= education.Subject %></td>
       <td><%= education.Grade %></td>
       <td>
-        <a
-          href="/admin/vieweducation/<%= education._id %>"
-          class="btn btn-outline-danger mx-3"
-          ><i class="fa-solid fa-trash"></i
-        ></a>
+        <a href="/vieweducation/<%= education._id %>" class="btn btn-outline-danger mx-3"><i class="fa-solid fa-trash"></i></a>
       </td>
     </tr>
     <%})%>
