--- a/admin/views/partials/navbar.ejs
+++ b/admin/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="sb-topnav navbar navbar-expand navbar-light bg-light">
   <!-- Navbar Brand-->
-  <a class="navbar-brand ps-3" href="/admin/home">Shaikh Admin Panel</a>
+  <a class="navbar-brand ps-3" href="/home">Shaikh Dev Inc. Panel</a>
   <!-- Sidebar Toggle-->
   <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!">
     <i class="fas fa-bars"></i>
@@ -19,8 +19,8 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="#!">Settings</a></li>
-        <li><a class="dropdown-item" href="/admin/activity">Activity Log</a></li>
+        <!-- <li><a class="dropdown-item" href="#!">Settings</a></li> -->
+        <li><a class="dropdown-item" href="/activity">Activity Log</a></li>
         <li>
           <hr class="dropdown-divider" />
         </li>
